--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <div class="container">
-        <h1>Countdown to Haroon's Birthday 🎉</h1>
+        <h1>🎂 Countdown to Haroon's Birthday 🎉</h1>
         <div id="countdown">
             <div class="time-box">
                 <span id="days">00</span>
@@ -27,6 +27,9 @@
                 <p>Seconds</p>
             </div>
         </div>
+        <footer>
+            <p>🎈 Let the countdown begin! 🎈</p>
+        </footer>
     </div>
     <script src="script.js"></script>
 </body>
