--- a/index.html
+++ b/index.html
@@ -1,36 +1,77 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Birthday Countdown</title>
-    <link rel="stylesheet" href="styles.css">
-</head>
-<body>
-    <div class="container">
-        <h1>🎂 Countdown to Haroon's Birthday 🎉</h1>
-        <div id="countdown">
-            <div class="time-box">
-                <span id="days">00</span>
-                <p>Days</p>
-            </div>
-            <div class="time-box">
-                <span id="hours">00</span>
-                <p>Hours</p>
-            </div>
-            <div class="time-box">
-                <span id="minutes">00</span>
-                <p>Minutes</p>
-            </div>
-            <div class="time-box">
-                <span id="seconds">00</span>
-                <p>Seconds</p>
-            </div>
-        </div>
-        <footer>
-            <p>🎈 Let the countdown begin! 🎈</p>
-        </footer>
-    </div>
-    <script src="script.js"></script>
-</body>
-</html>
+/* Background and Font Styling */
+body {
+    font-family: 'Poppins', sans-serif;
+    background: linear-gradient(120deg, #1e90ff, #ff7f50);
+    color: white;
+    text-align: center;
+    margin: 0;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100vh;
+}
+
+.container {
+    background: rgba(0, 0, 0, 0.8);
+    padding: 30px 20px;
+    border-radius: 15px;
+    box-shadow: 0 10px 30px rgba(0, 0, 0, 0.5);
+    max-width: 500px;
+    width: 90%;
+}
+
+h1 {
+    font-size: 2.5rem;
+    margin-bottom: 20px;
+    background: linear-gradient(90deg, #ffdd00, #ff0080);
+    -webkit-background-clip: text;
+    color: transparent;
+}
+
+#countdown {
+    display: flex;
+    justify-content: space-around;
+    gap: 15px;
+}
+
+.time-box {
+    background: rgba(0, 128, 0, 0.8);
+    padding: 20px;
+    border-radius: 10px;
+    flex: 1;
+    text-align: center;
+    box-shadow: 0 5px 15px rgba(0, 255, 0, 0.4);
+    transition: transform 0.3s ease-in-out;
+}
+
+.time-box:hover {
+    transform: scale(1.1);
+}
+
+.time-box span {
+    font-size: 3rem;
+    font-weight: bold;
+    display: block;
+    color: #32cd32;
+    text-shadow: 0 0 10px #00ff00, 0 0 20px #32cd32;
+}
+
+.time-box p {
+    font-size: 1rem;
+    font-weight: 600;
+    margin-top: 10px;
+    color: #ffffe0;
+    text-transform: uppercase;
+    letter-spacing: 2px;
+}
+
+footer {
+    margin-top: 20px;
+    color: #ffebcd;
+    font-size: 1rem;
+    text-shadow: 0 0 5px #fff;
+}
+
+footer p {
+    font-size: 1.2rem;
+}
