--- a/index.html
+++ b/index.html
@@ -1,77 +1,72 @@
-/* Background and Font Styling */
-body {
-    font-family: 'Poppins', sans-serif;
-    background: linear-gradient(120deg, #1e90ff, #ff7f50);
-    color: white;
-    text-align: center;
-    margin: 0;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    height: 100vh;
-}
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <title>Typing Animation</title>
+  <style>
+    body {
+      background-color: #111;
+      color: white;
+      font-family: monospace;
+      font-size: 2rem;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      height: 100vh;
+    }
+    #text {
+      font-style: italic;
+      border-right: 2px solid white;
+      padding-right: 5px;
+      white-space: nowrap;
+      overflow: hidden;
+    }
+  </style>
+</head>
+<body>
+  <div id="text"></div>
 
-.container {
-    background: rgba(0, 0, 0, 0.8);
-    padding: 30px 20px;
-    border-radius: 15px;
-    box-shadow: 0 10px 30px rgba(0, 0, 0, 0.5);
-    max-width: 500px;
-    width: 90%;
-}
+  <script>
+    const element = document.getElementById('text');
+    const firstText = "hello there";
+    const secondText = "welcome to my website";
 
-h1 {
-    font-size: 2.5rem;
-    margin-bottom: 20px;
-    background: linear-gradient(90deg, #ffdd00, #ff0080);
-    -webkit-background-clip: text;
-    color: transparent;
-}
+    let index = 0;
 
-#countdown {
-    display: flex;
-    justify-content: space-around;
-    gap: 15px;
-}
+    // Type first text
+    function typeFirst() {
+      if (index < firstText.length) {
+        element.innerHTML += firstText.charAt(index);
+        index++;
+        setTimeout(typeFirst, 100);
+      } else {
+        setTimeout(eraseFirst, 1000);
+      }
+    }
 
-.time-box {
-    background: rgba(0, 128, 0, 0.8);
-    padding: 20px;
-    border-radius: 10px;
-    flex: 1;
-    text-align: center;
-    box-shadow: 0 5px 15px rgba(0, 255, 0, 0.4);
-    transition: transform 0.3s ease-in-out;
-}
+    // Erase first text
+    function eraseFirst() {
+      if (index > 0) {
+        element.innerHTML = firstText.substring(0, index - 1);
+        index--;
+        setTimeout(eraseFirst, 50);
+      } else {
+        index = 0;
+        element.style.fontStyle = "normal"; // Remove italic for second text if you want
+        typeSecond();
+      }
+    }
 
-.time-box:hover {
-    transform: scale(1.1);
-}
+    // Type second text
+    function typeSecond() {
+      if (index < secondText.length) {
+        element.innerHTML += secondText.charAt(index);
+        index++;
+        setTimeout(typeSecond, 100);
+      }
+    }
 
-.time-box span {
-    font-size: 3rem;
-    font-weight: bold;
-    display: block;
-    color: #32cd32;
-    text-shadow: 0 0 10px #00ff00, 0 0 20px #32cd32;
-}
-
-.time-box p {
-    font-size: 1rem;
-    font-weight: 600;
-    margin-top: 10px;
-    color: #ffffe0;
-    text-transform: uppercase;
-    letter-spacing: 2px;
-}
-
-footer {
-    margin-top: 20px;
-    color: #ffebcd;
-    font-size: 1rem;
-    text-shadow: 0 0 5px #fff;
-}
-
-footer p {
-    font-size: 1.2rem;
-}
+    typeFirst();
+  </script>
+</body>
+</html>
